--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.data.mongodb.host=10.172.64.132 
+spring.data.mongodb.host=10.172.64.132
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=campaign
+
+#spring.data.mongodb.uri=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
