--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 #spring.data.mongodb.port=27017
 spring.data.mongodb.database=campaign
 
-spring.data.mongodb.uri=mongodb://ubuntu:123@62.98.176.106:27017/?authSource=campaign&readPreference=primary&appname=MongoDB%20Compass&ssl=false
+spring.data.mongodb.uri=mongodb://ubuntu:123@mongodb:27017/?authSource=campaign&readPreference=primary&appname=MongoDB%20Compass&ssl=false
