--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.data.mongodb.host=10.172.64.132
-#spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=campaign
 
-spring.data.mongodb.uri=mongodb://ubuntu:123@192.168.1.3:27017/?authSource=campaign&readPreference=primary&appname=MongoDB%20Compass&ssl=false
+#spring.data.mongodb.uri=mongodb://ubuntu:123@192.168.1.3:27017/?authSource=campaign&readPreference=primary&appname=MongoDB%20Compass&ssl=false
